--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,8 +1,52 @@
 @charset "UTF-8";
 
-/*
-    Paleta de cores
-    Verde: #49a09d
-    Lilás: #5f2c82
-    
-*/
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+:root {
+    --corlilas: #5f2c82;
+    --corverde: #49a09d;
+}
+
+body, html {
+    background-color: var(--corlilas);
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+main > section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.481);
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+}
+
+main > section > div#imagem {
+    display: block;
+    background: url('../imagens/predio-oval.jpg') no-repeat center center;
+    background-size: cover;
+    height: 200px;
+}
+
+main > section > div#formulario {
+    display: block;
+    padding: 10px;
+
+
+}
