--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,7 +33,7 @@ main > section#login {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.481);
     background-color: white;
     width: 250px;
-    height: 530px;
+    height: 515px;
     border-radius: 20px;
 
     transition: width 0.3s, height 0.3s;
@@ -68,21 +68,31 @@ form > div.campo {
     display: block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
-    margin-bottom: 5px;
+    border-radius: 8px;
+    margin: 5px 0px;
 }
 
 form > div.campo > label {
     display: none;
 }
 
-form > div.campo > ::placeholder {
-    background-color: #59c6c2;
+form > div.campo > input {
+    background-color: #87cdca;
+    font-size: 1em;
+    margin-left: 39px;
+    transform: translateY(-40px);
+    height: 90%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+
 }
 
 form > div.campo > span {
     color: white;
-    font-size: 30px;
+    background-color: black;
+    font-size: 2em;
+    width: 40px;
     padding: 5px;
 }
 
