--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,7 +28,6 @@ main > section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.481);
     background-color: white;
@@ -38,6 +37,7 @@ main > section#login {
 
     transition: width 0.3s, height 0.3s;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%);
 }
 
 main > section > div#imagem {
@@ -65,6 +65,7 @@ main > section > div#formulario > p {
 
 form > div.campo {
     background-color: var(--corlilas);
+    border: 2px solid #5f2c82;
     display: block;
     width: 100%;
     height: 40px;
@@ -79,18 +80,21 @@ form > div.campo > label {
 form > div.campo > input {
     background-color: #87cdca;
     font-size: 1em;
-    margin-left: 39px;
-    transform: translateY(-40px);
-    height: 90%;
+    margin-left: 50px;
+    height: 100%;
+    width: calc(100% - 50px);
     border: 0px;
     border-radius: 8px;
     padding: 4px;
+    transform: translateY(-42px);
+}
 
+form > div.campo > input:focus-within {
+    background-color: white;
 }
 
 form > div.campo > span {
     color: white;
-    background-color: black;
     font-size: 2em;
     width: 40px;
     padding: 5px;
